--- a/MyHomeApp/src/main/resources/config/application-dev.yml
+++ b/MyHomeApp/src/main/resources/config/application-dev.yml
@@ -32,9 +32,9 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/MyHomeApp
-    username: MyHomeApp
-    password:
+    url: jdbc:postgresql://localhost:5432/myhomedb
+    username: postgres
+    password: amm1992
     hikari:
       poolName: Hikari
       auto-commit: false
