--- a/MyHomeApp/pom.xml
+++ b/MyHomeApp/pom.xml
@@ -103,6 +103,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+				<groupId>io.awspring.cloud</groupId>
+				<artifactId>spring-cloud-aws-dependencies</artifactId>
+				<version>2.3.0</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
             <!-- jhipster-needle-maven-add-dependency-management -->
         </dependencies>
     </dependencyManagement>
@@ -282,6 +289,10 @@
 		    <version>1.17.6</version>
 		    <scope>test</scope>
 		</dependency>
+	    <dependency>
+	        <groupId>io.awspring.cloud</groupId>
+	        <artifactId>spring-cloud-starter-aws-messaging</artifactId>
+	    </dependency>
 
         <!-- jhipster-needle-maven-add-dependency -->
     </dependencies>
