--- a/MyHomeApp/src/main/resources/config/application-dev.yml
+++ b/MyHomeApp/src/main/resources/config/application-dev.yml
@@ -56,15 +56,15 @@ spring:
 server:
   port: 8080
   
-cloud:
-  aws:
-    credentials:
-      access-key: AKIAR4YSV4DJBFKDXJML
-      secret-key: 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
-    region:
-      static: eu-west-3
-    stack:
-      auto: false
+#cloud:
+#  aws:
+#    credentials:
+#      access-key: AKIAR4YSV4DJBFKDXJML
+#      secret-key: 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
+#    region:
+#      static: eu-west-3
+#    stack:
+#      auto: false
 
 # ===================================================================
 # JHipster specific properties
