--- a/MyHomeApp/pom.xml
+++ b/MyHomeApp/pom.xml
@@ -298,6 +298,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+		<!--<dependency>
+		    <groupId>net.kaczmarzyk</groupId>
+		    <artifactId>specification-arg-resolver</artifactId>
+		    <version>2.17.0</version>
+		</dependency>-->
 
         <!-- jhipster-needle-maven-add-dependency -->
     </dependencies>
