Seguimos con el kanban

--- a/MyHomeApp/package.json
+++ b/MyHomeApp/package.json
@@ -89,8 +89,10 @@
     "@popperjs/core": "2.11.6",
     "@types/google.maps": "^3.51.1",
     "bootstrap": "5.2.0",
+    "bootstrap-icons": "^1.10.3",
     "bootswatch": "5.2.0",
     "dayjs": "1.11.5",
+    "ngx-dropzone": "^3.1.0",
     "ngx-infinite-scroll": "14.0.0",
     "ngx-webstorage": "10.0.1",
     "rxjs": "7.5.6",
