--- a/MyHomeApp/package.json
+++ b/MyHomeApp/package.json
@@ -77,6 +77,7 @@
     "@angular/compiler": "14.2.0",
     "@angular/core": "14.2.0",
     "@angular/forms": "14.2.0",
+    "@angular/google-maps": "^14.2.7",
     "@angular/localize": "14.2.0",
     "@angular/platform-browser": "14.2.0",
     "@angular/platform-browser-dynamic": "14.2.0",
@@ -88,11 +89,12 @@
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.6",
-    "@types/google.maps": "^3.51.1",
+    "@types/google.maps": "^3.52.0",
     "bootstrap": "5.2.0",
     "bootstrap-icons": "^1.10.3",
     "bootswatch": "5.2.0",
     "dayjs": "1.11.5",
+    "jqwidgets-scripts": "^15.0.0",
     "ngx-dropzone": "^3.1.0",
     "ngx-infinite-scroll": "14.0.0",
     "ngx-webstorage": "10.0.1",
@@ -108,6 +110,7 @@
     "@angular/cli": "14.2.1",
     "@angular/compiler-cli": "14.2.0",
     "@angular/service-worker": "14.2.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jest": "28.1.8",
     "@types/node": "16.11.56",
     "@typescript-eslint/eslint-plugin": "5.36.1",
