--- a/MyHomeApp/package.json
+++ b/MyHomeApp/package.json
@@ -85,6 +85,8 @@
     "@fortawesome/angular-fontawesome": "0.11.1",
     "@fortawesome/fontawesome-svg-core": "6.2.0",
     "@fortawesome/free-solid-svg-icons": "6.2.0",
+    "@googlemaps/markerclusterer": "^2.0.15",
+    "@googlemaps/markerclustererplus": "^1.2.10",
     "@ng-bootstrap/ng-bootstrap": "13.0.0",
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
@@ -113,6 +115,7 @@
     "@types/googlemaps": "^3.43.3",
     "@types/jest": "28.1.8",
     "@types/node": "16.11.56",
+    "@types/supercluster": "^7.1.0",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
     "browser-sync": "2.27.10",
