--- a/MyHomeApp/package.json
+++ b/MyHomeApp/package.json
@@ -72,6 +72,7 @@
     "packaging": "jar"
   },
   "dependencies": {
+    "@angular/animations": "^14.2.0",
     "@angular/cdk": "^14.2.0",
     "@angular/common": "14.2.0",
     "@angular/compiler": "14.2.0",
@@ -91,12 +92,14 @@
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.6",
+    "@types/dragula": "^2.1.34",
     "@types/google.maps": "^3.52.0",
     "bootstrap": "5.2.0",
     "bootstrap-icons": "^1.10.3",
     "bootswatch": "5.2.0",
     "dayjs": "1.11.5",
     "jqwidgets-scripts": "^15.0.0",
+    "ng2-dragula": "^3.2.0",
     "ngx-dropzone": "^3.1.0",
     "ngx-infinite-scroll": "14.0.0",
     "ngx-webstorage": "10.0.1",
